--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
         "laraveles/spanish": "^1.5",
+        "owen-it/laravel-auditing": "^13.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
