--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/images/excel.png": "/images/excel.png",
     "/images/pqr-logo.png": "/images/pqr-logo.png"
 }
